kube-infra/kustomize/catalog/ortelius-www/overlays/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ortelius-hugo
spec:
  selector:
    app: ortelius-hugo
    tier: backend
  ports:
    - name: hugo
      protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
