kube-infra/kustomize/catalog/ortelius-www/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
  labels:
    app.kubernetes.io/instance: ortelius-www
  name: ortelius-website
  namespace: ortelius
spec:
  # defaultBackend:
  #   service:
  #     name: ortelius-www
  #     port:
  #       number: 80
  rules:
  - host: ortelius.io
    http:
      paths:
      - backend:
          service:
            name: ortelius-www
            port:
              number: 80
        path: /
        pathType: Prefix
